Updated from Publii

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1818,6 +1818,14 @@ textarea {
         }
         .post__bio { 
                border-color: #2C2E35; 
+        }
+        .topbar__inner {
+               max-width: calc(50rem + 17rem + 3.85714rem + 1vw);
+        }
+        @media all and (min-width: 56.25em) {
+           .content {
+               grid-template-columns: 1fr minmax(auto, 50rem) calc(17rem + 1.28571rem + 0.5vw) 1fr;
+           }
         }	
        .blur-up { 
               -webkit-filter: blur(5px);
