--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,7 +188,7 @@ h6 + p {
 
 b,
 strong {
-  font-weight: 700; }
+  font-weight: 500; }
 
 blockquote {
   font-family: "Roboto", sans-serif;
@@ -222,7 +222,7 @@ ol {
     padding: 0 0 0.25714rem 1.02857rem; }
 
 dl dt {
-  font-weight: 700; }
+  font-weight: 500; }
 
 pre {
   margin: calc(1.02857rem + 0.25vw) 0 0;
@@ -280,7 +280,7 @@ button {
   color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font: 700 0.7242rem "Roboto", sans-serif;
+  font: 500 0.7242rem "Roboto", sans-serif;
   letter-spacing: 0.02rem;
   padding: 0.64286rem 1.54286rem;
   vertical-align: middle;
@@ -333,7 +333,7 @@ fieldset {
     padding: 0 1rem; }
 
 legend {
-  font-weight: 700; }
+  font-weight: 500; }
 
 label {
   font-weight: 500;
@@ -383,43 +383,42 @@ select {
     -webkit-box-shadow: inset 0 0 2px #448aff;
     box-shadow: inset 0 0 2px #448aff; }
 
-[type=checkbox],
-[type=radio] {
-  display: none; }
-  [type=checkbox] + label,
-  [type=radio] + label {
-    display: inline-block;
+input[type=checkbox],
+input[type=radio] {
+  opacity: 0;
+  position: absolute; }
+  input[type=checkbox] + label,
+  input[type=radio] + label {
+    position: relative;
+    margin-left: -1px;
     cursor: pointer;
-    top: 0;
-    margin-right: 1.54286rem; }
+    padding: 0; }
+    input[type=checkbox] + label:before,
+    input[type=radio] + label:before {
+      background-color: #ffffff;
+      border: 1px solid #d5d5d7;
+      border-radius: 2px;
+      content: '';
+      display: inline-block;
+      height: 1.02857rem;
+      line-height: 1.02857rem;
+      margin-right: 0.51429rem;
+      vertical-align: text-top;
+      text-align: center;
+      width: 1.02857rem; }
+  input[type=checkbox]:checked + label:before,
+  input[type=radio]:checked + label:before {
+    content: "";
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 8'%3e%3cpolygon points='9.53 0 4.4 5.09 1.47 2.18 0 3.64 2.93 6.54 4.4 8 5.87 6.54 11 1.46 9.53 0' fill='%23448aff'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: 11px 8px;
+    background-position: 50% 50%; }
 
-.checkbox:before,
-.radio:before {
-  border: 1px solid #d5d5d7;
-  border-radius: 2px;
-  content: "";
-  display: inline-block;
-  height: 1.28571rem;
-  line-height: 1.28571rem;
-  margin-right: 1.02857rem;
-  vertical-align: middle;
-  text-align: center;
-  width: 1.28571rem; }
-
-.radio:before {
+input[type=radio] + label:before {
   border-radius: 50%; }
 
-[type=checkbox]:checked + .checkbox:before {
-  content: "\2713";
-  color: #448aff;
-  font-weight: 700; }
-
-[type=radio]:checked + .radio:before {
-  -webkit-box-shadow: inset 0 0 0 4px #ffffff;
-  box-shadow: inset 0 0 0 4px #ffffff;
-  content: "";
-  background: #448aff;
-  border: 1px solid #d5d5d7; }
+input[type=radio]:checked + label:before {
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3ccircle cx='4' cy='4' r='4' fill='%23448aff'/%3e%3c/svg%3e"); }
 
 [type=file] {
   margin-bottom: 1.54286rem;
@@ -601,7 +600,7 @@ textarea {
 .logo {
   color: #ffffff !important;
   font-family: "Roboto", sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: -0.1rem;
   text-transform: uppercase; }
   .logo {
@@ -615,7 +614,7 @@ textarea {
 
 .navbar__menu {
   font-family: "Roboto", sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -654,7 +653,8 @@ textarea {
       .navbar__menu li {
         display: inline-block;
         margin: 0 0 0 1.54286rem;
-        position: relative; } }
+        position: relative;
+        z-index: 2001; } }
     .navbar__menu li:hover, .navbar__menu li[aria-expanded="true"] {
       cursor: pointer; }
       @media all and (min-width: 56.25em) {
@@ -738,7 +738,13 @@ textarea {
         .navbar__submenu li ul.navbar__submenu--reversed {
           left: auto;
           right: 90%;
-          top: 0; } }
+          top: 0; }
+    .col-2 .navbar__submenu {
+      -webkit-column-count: 2;
+      column-count: 2; }
+    .col-3 .navbar__submenu {
+      -webkit-column-count: 3;
+      column-count: 3; } }
 
 .navbar__toggle {
   background: none !important;
@@ -913,21 +919,42 @@ textarea {
   .tags > li:last-child {
     padding: 0; }
 
-.newsletter__note {
+.newsletter {
   color: #84888e;
   font-size: 0.77248rem;
   line-height: 1.3;
   margin-bottom: 0.51429rem; }
-
-.newsletter input {
-  margin-top: 0.51429rem;
-  width: 100%; }
+  .newsletter__description {
+    margin-bottom: calc(0.77143rem + 0.5vw); }
+  .newsletter input {
+    margin-top: 0.51429rem;
+    width: 100%; }
+  .newsletter label {
+    display: block;
+    margin: 0.51429rem 0 0; }
+  .newsletter ul {
+    margin: calc(0.77143rem + 0.5vw) 0; }
+    .newsletter ul li {
+      padding: 0;
+      list-style: none;
+      position: relative; }
+      .newsletter ul li input[type=checkbox] {
+        left: 0;
+        width: 1.02857rem; }
+      .newsletter ul li label {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        font-weight: 400; }
+        .newsletter ul li label:before {
+          -ms-flex-negative: 0;
+          flex-shrink: 0; }
 
 .follow > a {
   border-radius: 3px;
   color: #ffffff;
   display: inline-block;
-  font: 700 0.7242rem "Roboto", sans-serif;
+  font: 500 0.7242rem "Roboto", sans-serif;
   letter-spacing: 0.02rem;
   margin: 0 1% 0.25714rem 0;
   padding: 0.64286rem 0.77143rem 0.64286rem 0.25714rem;
@@ -999,7 +1026,7 @@ textarea {
   border-radius: 3px;
   color: #ffffff !important;
   font-size: 1rem;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1;
   padding: 0.25714rem 0.51429rem;
   right: calc(1.02857rem + 0.5vw);
@@ -1310,7 +1337,9 @@ textarea {
     .post__entry a:focus {
       color: #448aff; }
     .post__entry a:hover {
-      text-decoration: underline; }
+      text-decoration: underline;
+      -webkit-text-decoration-skip: ink;
+      text-decoration-skip: ink; }
   .post__lead {
     font-size: 1.13778rem; }
     @media screen and (min-width: 20rem) {
@@ -1405,7 +1434,7 @@ textarea {
       margin-bottom: 1.02857rem;
       padding: 0 0.25714rem 0 0; }
       .post__tag li > a {
-        font: 700 0.7242rem "Roboto", sans-serif;
+        font: 500 0.7242rem "Roboto", sans-serif;
         letter-spacing: 0.02rem;
         padding: 0.64286rem 1.54286rem; }
   .post__nav {
@@ -1575,7 +1604,7 @@ textarea {
 
 .pagination {
   border-top: 1px solid #e1e2e3;
-  font: 700 0.7242rem "Roboto", sans-serif;
+  font: 500 0.7242rem "Roboto", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1626,7 +1655,7 @@ textarea {
       flex-flow: row wrap; } }
   .footer__logo {
     color: #b4b9c1;
-    font: 700 1.29454rem "Roboto", sans-serif;
+    font: 500 1.29454rem "Roboto", sans-serif;
     font-weight: 700;
     letter-spacing: -0.1rem;
     text-transform: uppercase; }
@@ -1739,39 +1768,3 @@ textarea {
 
 .pswp--light .pswp__caption__center {
   color: #2c2e35; }
-
-/*  EU Cookie Law Bar  ------------------------ */
-.cookie-bar {
-  background: #ffffff;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  bottom: 0;
-  font-size: 0.82397rem;
-  padding: 0.77143rem;
-  position: fixed;
-  text-align: center;
-  width: 100%;
-  -webkit-transform: translateY(100%);
-  -ms-transform: translateY(100%);
-  transform: translateY(100%);
-  -webkit-transition: -webkit-transform 0.8s ease 0s;
-  transition: -webkit-transform 0.8s ease 0s;
-  -o-transition: transform 0.8s ease 0s;
-  transition: transform 0.8s ease 0s;
-  transition: transform 0.8s ease 0s, -webkit-transform 0.8s ease 0s;
-  will-change: transform;
-  z-index: 99999; }
-  .cookie-bar > p {
-    margin: 0; }
-  .cookie-bar.is-sticky {
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0); }
-  .cookie-bar__close {
-    display: block;
-    margin: 0.77143rem auto 0;
-    padding: 0.51429rem 1.02857rem; }
-    @media all and (min-width: 56.25em) {
-      .cookie-bar__close {
-        display: inline-block;
-        margin: 0 0 0 1.54286rem; } }
